<resources>
    <string name="app_name">DemocraticDecision</string>
    <string name="menu_choose_sign_in">Choose Sign in Authentication Method</string>

    <string name="menu_voteexplore">Explore votes</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="facebook_app_id">1763916337201384</string>
    <string name="menu_facebook_sign_in">Facebook Sign In/Sign out</string>
    <string name="label_facebook_sign_in"> Use a Facebook Sign In Facebook Sign In</string>
    <string name="des_facebook_sign_in"> Use a Facebook Sign In Facebook Sign In</string>
    <string name="continue_to_vote">Continue to Voting</string>

    <string name="label_google_sign_in"> Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate.</string>
    <string name="desc_google_smart_password_sign_in">Use a Google Smart Password Sign In to authenticate and save your credential.</string>
    <string name="label_google_smart_password_sign_in">Google Smart Password Sign In </string>
    <string name="menu_google_sign_in">Google Sign In</string>
    <string name="sign_in_email_cta">Sign In with Email</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate .</string>
    <string name="menu_emailpassword_sign_in">Email/Password Authentication</string>


    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Auth user..</string>
    <string name="menu_anonymous_sign_in">Anonymous Authentication</string>


    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate .</string>
    <string name="menu_custom_sign_in">Custom Authentication</string>


    <string name="desc_cast_your_vote">Use your democratic right to make you voice heard, Cast your vote in eu referendum in your counrty</string>
    <string name="menu_vote">Give EU referendum vote</string>

    <string name="desc_suggestion_vote">Give suggestions which issues should be voted</string>
    <string name="menu_vote_suggestion">Give vote suggestion</string>


    <string name="desc_vote_char">Demonstrates the graphical chart of the data</string>
    <string name="menu_vote_stats">See vote stats</string>


    <string name="menu_sign_out">Sign Out</string>
    <string name="revoke_access">Revoke </string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_crackeu_lockup">Crack eu logo and name</string>

    <string name="user_status_fmt">User: %s</string>
    <string name="user_management">User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>


    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="eureferendum">Should your country of residence held a democratic eu referendum ?</string>
    <string name="eu_referendumvote_yes">Yes</string>
    <string name="eu_referendumvote_no">No</string>
    <string name="eureferendum_suggestion">Suggest voting on urgent issue demanding national decision making</string>
    <string name="button_eu_vote">Send Vote</string>
    <string name="button_vote_suggestion">Send Suggestion</string>
    <string name="eu_country">Your EU country</string>

    <string name="select_arragned_stats_by">Select vote statistics listing criteria</string>
    <string name="select_arragned_stats_by_voteTotalcount">Total count</string>
    <string name="select_arragned_stats_by_voteYescount">Yes vote counts </string>
    <string name="select_arragned_stats_by_voteNocount">No vote counts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_facebook_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
