<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/header"
    tools:context="org.crackeu.democraticdecision.vote.VoteActivity">

    <ImageView
        android:id="@+id/icon"
        android:contentDescription="@string/desc_crackeu_lockup"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/crackeu_lockup_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/eureferendum" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_referendumvote_yes"
            android:id="@+id/yesradioButton" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eu_referendumvote_no"
            android:id="@+id/noradioButton" />
    </RadioGroup>


    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/eu_country" />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:id="@+id/listEuCountries"
        style="@style/Base.Widget.AppCompat.ListView"
        android:background="@color/colorPrimary" />


    <Button
        android:layout_height="wrap_content"
        android:text="@string/button_eu_vote"
        android:layout_width="@dimen/field_width_standard"
        android:id="@+id/button_send_eu_referendum_button"
        android:layout_gravity="center_horizontal" />


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@string/button_eu_vote" />


    <TextView
        android:id="@+id/tvXMax"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/chart1"
        android:layout_alignParentRight="true"
        android:text="500"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvYMax"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/chart1"
        android:layout_alignParentRight="true"
        android:text="500"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <!-- <android.support.v7.widget.RecyclerView
         android:id="@+id/voteList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/header"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:clipToPadding="false"
         android:padding="16dp"
         tools:listitem="@layout/vote"
         style="@style/Widget.AppCompat.ListView"
         android:background="@color/highlighted_text_material_dark" />-->


</LinearLayout>
